# agent-bench

./: .gitignore  .gitmodules  AGENTS.md  README.md  package.json  pyproject.toml  pyrightconfig.json  setup.py
docs/: index.html  result.json
prompt-test/: README.md
prompt-test/coding/: web-frontend-todo-app.yaml
prompt-test/tools/: system-info-collection.yaml
prompt-test/writing/: latex-flowchart.yaml
results/: summary.csv
src/agent_bench/: __init__.py  cli.py  collect_results.py  error.py  evaluator.py  runner.py  task.py
src/agent_bench/agents/: __init__.py  base.py  claude.py  claude_sdk.py
src/agents/: opencode.ts  types.ts
src/cli/commands/: collect.ts  list.ts  run.ts
src/collectors/: csv.ts  json.ts
src/core/: config.ts  loader.ts  runner.ts  task.ts  workspace.ts
src/evaluator/: results.ts  verifier.ts
